--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!--
                 <dependency>
                     <groupId>org.springframework.data</groupId>
-                    <artifactId>spring-data-rest-hal-browser</artifactId>
+                    <artifactId>spring-data-rest-hal-explorer</artifactId>
                     <scope>runtime</scope>
                 </dependency>
         -->
